tests/golden/error/relative_import_depth2_fail/outer/mod.tg
pub mod middle;
pub mod target;
